<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/abs_button1"
        android:text="@string/ab_button_1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/abs_button2"
        android:text="@string/ab_button_2"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/abs_button3"
        android:text="@string/ab_button_3"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/abs_button4"
        android:text="@string/ab_button_4"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/abs_button5"
        android:text="@string/ab_button_5"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/abs_button6"
        android:text="@string/ab_button_6"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/abs_button7"
        android:text="@string/ab_button_7"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

</LinearLayout>
</ScrollView>