<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:src="@drawable/skeleton_1" />

    <Button
        android:id="@+id/Button1"
        android:text="@string/Button1"
        android:textColor="#EDDAEB"
        android:textSize="15sp"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:onClick="shoulderList"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp" />
    <Button
        android:id="@+id/Button2"
        android:text="@string/Button2"
        android:textColor="#EDDAEB"
        android:textSize="15sp"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:onClick="backList"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignTop="@+id/Button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/Button3"
        android:text="@string/Button3"
        android:textColor="#EDDAEB"
        android:textSize="15sp"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:onClick="chestList"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignTop="@+id/Button6"
        android:layout_alignRight="@+id/Button2"
        android:layout_alignEnd="@+id/Button2"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp" />
    <Button
        android:id="@+id/Button4"
        android:text="@string/Button4"
        android:textColor="#EDDAEB"
        android:onClick="absList"
        android:textSize="15sp"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/Button6"
        android:layout_alignLeft="@+id/Button1"
        android:layout_alignStart="@+id/Button1"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp" />
    <Button
        android:id="@+id/Button5"
        android:text="@string/Button5"
        android:textColor="#EDDAEB"
        android:textSize="15sp"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:onClick="legsList"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/Button3"
        android:layout_alignStart="@+id/Button3" />
    <Button
        android:id="@+id/Button6"
        android:text="@string/Button6"
        android:textColor="#EDDAEB"
        android:textSize="15sp"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:onClick="armList"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/Button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
</ScrollView>