<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <ImageButton
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/button_workout"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:onClick="workout"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:src="@drawable/weight"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:id="@+id/weight1"
        android:textSize="24sp"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/button_graphs"
        android:layout_toRightOf="@+id/button_workout"
        android:layout_toEndOf="@+id/button_workout"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp" />

    <ImageButton
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/button_graphs"
        android:onClick="graphs"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:src="@drawable/graph"
        android:layout_below="@+id/button_workout"
        android:layout_alignLeft="@+id/button_workout"
        android:layout_alignStart="@+id/button_workout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:id="@+id/graph1"
        android:textSize="24sp"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:textColor="#FFFFFF"
        android:layout_alignBottom="@+id/button_graphs"
        android:layout_alignLeft="@+id/weight1"
        android:layout_alignStart="@+id/weight1"
        android:layout_marginBottom="19dp" />

    <ImageButton
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/button_videos"
        android:onClick="video"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:src="@drawable/video"
        android:layout_below="@+id/button_graphs"
        android:layout_alignLeft="@+id/button_graphs"
        android:layout_alignStart="@+id/button_graphs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:id="@+id/video1"
        android:textSize="24sp"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:textColor="#FFFFFF"
        android:layout_alignBottom="@+id/button_videos"
        android:layout_alignLeft="@+id/graph1"
        android:layout_alignStart="@+id/graph1"
        android:layout_marginBottom="18dp" />

    <ImageButton
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/button_tracker"
        android:onClick="tracker"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:src="@drawable/tracker"
        android:layout_below="@+id/button_videos"
        android:layout_alignLeft="@+id/button_videos"
        android:layout_alignStart="@+id/button_videos" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:id="@+id/tracker1"
        android:textSize="24sp"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:textColor="#FFFFFF"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/button_videos"
        android:layout_alignLeft="@+id/video1"
        android:layout_alignStart="@+id/video1" />

    <ImageButton
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/button_forum"
        android:onClick="forum"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:src="@drawable/forum"
        android:layout_below="@+id/button_tracker"
        android:layout_alignLeft="@+id/button_tracker"
        android:layout_alignStart="@+id/button_tracker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_6"
        android:id="@+id/forum1"
        android:textSize="24sp"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/button_settings"
        android:layout_alignLeft="@+id/setting1"
        android:layout_alignStart="@+id/setting1" />

    <ImageButton
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/button_settings"
        android:onClick="settings"
        android:shadowColor="#FF0000"
        android:shadowRadius="6"
        android:shadowDx="5"
        android:shadowDy="5"
        android:src="@drawable/settings"
        android:layout_below="@+id/button_forum"
        android:layout_alignLeft="@+id/button_forum"
        android:layout_alignStart="@+id/button_forum" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:id="@+id/setting1"
        android:textSize="24sp"
        android:shadowColor="#FF0000"
        android:shadowRadius="3"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="21dp"
        android:layout_alignBottom="@+id/button_settings"
        android:layout_alignLeft="@+id/tracker1"
        android:layout_alignStart="@+id/tracker1" />

</RelativeLayout>
</ScrollView>